--- a/library.properties
+++ b/library.properties
@@ -5,5 +5,5 @@ maintainer=Eiji Onchi <onchi.eiji@gmail.com>
 sentence=Calculates the inverse kinematics for a 3 links arm and a rotating base.
 paragraph=Tested with Arduino UNO and Teensy.
 category=Data Processing
-url=
+url=https://github.com/cgxeiji/CGx-InverseK
 architectures=avr, samd, sam
